--- a/WineStore/WineStoreWeb/Views/Shared/_Layout.cshtml
+++ b/WineStore/WineStoreWeb/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Store" asp-action="Index">Shop</a></li>
-                    <li><a asp-area="" asp-controller="Trolley" asp-action="Index">Trolley @ViewData["CartItems"]</a></li>
+                    <li><a asp-area="" asp-controller="Trolley" asp-action="Index">Trolley <span id="trolleyItems"></span></a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                 </ul>
             </div>
