--- a/WineStore/WineStoreWeb/Views/Shared/_Layout.cshtml
+++ b/WineStore/WineStoreWeb/Views/Shared/_Layout.cshtml
@@ -32,8 +32,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Store" asp-action="Index">Shop</a></li>
-                    <li><a asp-area="" asp-controller="Trolley" asp-action="Index">Trolley (@ViewData["TrolleyItems"])</a></li>
+                    <li><a asp-area="" asp-controller="Store" asp-action="Index">Store</a></li>
+                    <li><a asp-area="" asp-controller="Trolley" asp-action="Index">Trolley (<span id='trolleyItems'>@ViewData["TrolleyItems"]</span>)</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                 </ul>
             </div>
