--- a/WineStore/WineStoreWeb/Views/Store/Index.cshtml
+++ b/WineStore/WineStoreWeb/Views/Store/Index.cshtml
@@ -6,26 +6,30 @@
 }
 <h2>@ViewData["Title"]</h2>
 
-<table>
-@foreach(WineItem wine in Model.WinesToDisplay) {
-	<tr>
-    <td><img src="@wine.WinePicture" alt="@wine.WineType:@wine.WineId" width="200" /></td>
-    <td width="200"><p> @Html.DisplayFor(item => wine.WineName) </p></td>
-    <td><p> @Html.DisplayFor(item => wine.WineInfo) </p></td>
-		<td width="150">
-			<p>&#163; @wine.WinePrice</p>
-        	@if(wine.WineInStock > 0) {
-                <p><b>In Stock</b></p>  
-			    <p><a href="javascript:AddToTrolley('@wine.WineType:@wine.WineId')">Add to Trolley</a></p>
-			} else {
-                <p><i>Out of stock</i></p>
-        	}
-			
+@if (Model.WinesToDisplay.Count > 0) {
+    <table>
+    @foreach(WineItem wine in Model.WinesToDisplay) {
+    	<tr>
+        <td><img src="@wine.WinePicture" alt="@wine.WineType:@wine.WineId" width="200" /></td>
+        <td width="200"><p> @Html.DisplayFor(item => wine.WineName) </p></td>
+        <td><p> @Html.DisplayFor(item => wine.WineInfo) </p></td>
+    		<td width="150">
+    			<p>&#163; @String.Format("{0:N2}", wine.WinePrice)</p>
+            	@if(wine.WineInStock > 0) {
+                    <p><b>In Stock</b></p>  
+    			    <p><a href="javascript:AddToTrolley('@wine.WineType:@wine.WineId')">Add to Trolley</a></p>
+    			} else {
+                    <p><i>Out of stock</i></p>
+            	}
+    			
 
-		</td>
-	</tr>
+    		</td>
+    	</tr>
+    }
+    </table>
+} else {
+    <p>It looks like there are no items in our online inventory. Please give us a call, and we'll be more than happy to help you. This will also allow us to update our online inventory in due course.</p>
 }
-</table>
 
 <script language="javascript" type="text/javascript" >
 
