--- a/WineStore/WineStoreWeb/Views/Trolley/Order.cshtml
+++ b/WineStore/WineStoreWeb/Views/Trolley/Order.cshtml
@@ -1,33 +1,36 @@
 ﻿@using WineStoreShared
 @model WineStoreWeb.Models.TrolleyViewModel
+
 @{
-    ViewData["Title"] = "Your trolley with " + ViewData["TrolleyItems"] + " items";
+    ViewData["Title"] = "Order for " + ViewData["CustomerEMail"];
 }
 <h2>@ViewData["Title"]</h2>
+
+@if((bool)ViewData["OrderBool"] == true) {
+    <div style="margin: 5px; padding: 5px; background-color: #99ff99; padding-top:10px; padding-bottom:2px">
+	    <p>@ViewData["OrderResult"]</p>
+    </div>
+} else {
+    <div style="margin: 5px; padding: 5px; background-color: #ff9999; padding-top:10px; padding-bottom:2px;">
+	    <p>@ViewData["OrderResult"]</p>
+    </div>
+}
 
 @if(Model.TrolleyItemsToDisplay.Keys.Count > 0) {
     <table>
     @foreach(WineItem wine in Model.TrolleyItemsToDisplay.Keys) {
         <tr>
-    	<td width="100">@Model.TrolleyItemsToDisplay[wine] x</td>
+        <td width="100">@Model.TrolleyItemsToDisplay[wine] x</td>
         <td><img src="@wine.WinePicture" alt="@wine.WineType:@wine.WineId" width="75" /></td>
         <td width="300"><p> @Html.DisplayFor(item => wine.WineName) </p></td>
         <td><p style="font-size: 8pt;"> @Html.DisplayFor(item => wine.WineInfo) </p></td>
             <td width="150">
                 <p><i>&#163; @String.Format("{0:N2}", wine.WinePrice) </i>per item</p>
                 <p><b>&#163; @String.Format("{0:N2}", (Model.TrolleyItemsToDisplay[wine] * wine.WinePrice)) </b> in total</p>
-                <p>@Html.ActionLink("Remove from trolley", "Remove", "Trolley", new { wineTypeAndId = (wine.WineType + ":" + wine.WineId)})</p>
 
             </td>
         </tr>
     }
     </table>
-    <h3>Current Total: &#163; @ViewData["Total"]</h3>
-    @using(Html.BeginForm("Order", "Trolley")) {
-    	<p>Enter your e-mail address to send us your order: <input type="text" name="EMail" /></p>
-    	<p><input type="submit" value="Order now" /></p>
-    	<p>Our automated system will confirm your order immediately.</p>
-    }
-} else {
-    <p>The trolley is currently empty. Please head to the <b>Store</b> to add items to the trolley.</p>
+    <h3>Order Total: &#163; @ViewData["Total"]</h3>
 }
