Updated Index.cshtml to correct typo

--- a/WineStoreWeb/Views/Home/Index.cshtml
+++ b/WineStoreWeb/Views/Home/Index.cshtml
@@ -38,7 +38,7 @@
             <img src="~/images/banner4.jpg" alt="Wine for any food" class="img-responsive" />
             <div class="carousel-caption" role="option">
                 <p>
-                    Find the perfect match for your upcoming occassion. 
+                    Find the perfect match for your upcoming occasion. 
                 </p>
             </div>
         </div>
