--- a/WineStoreWeb/Views/_ViewImports.cshtml
+++ b/WineStoreWeb/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 @using WineStoreWeb
 @using WineStoreWeb.Models
+@inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
